[package]
name = "web"
version = "0.1.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.9", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide", "font-awesome-brands"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
